--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/Sequence/Index.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/Sequence/Index.cshtml
@@ -68,7 +68,7 @@
                             <bs-input bs-width="10" name="NumberCode" maxlength="40" requried="requried"></bs-input>
                         </bs-row>
                         <bs-row>
-                            <bs-label>@L("NumberCode")</bs-label>
+                            <bs-label>@L("DateStringSpec")</bs-label>
                             <div class="col-md-10">
                                 <div class="form-line">
                                     <select class="form-control show-tick" name="DateStringSpec">
