--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/Sequence/_EditModal.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/Sequence/_EditModal.cshtml
@@ -14,7 +14,7 @@
         <bs-input bs-width="10" name="NumberCode" value="@Model.SeqNumber.NumberCode" readonly="readonly"></bs-input>
     </bs-row>
     <bs-row>
-        <bs-label>@L("NumberCode")</bs-label>
+        <bs-label>@L("DateStringSpec")</bs-label>
         <div class="col-md-10">
             <div class="form-line">
                 <select class="form-control show-tick" name="DateStringSpec">
