--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/Sequence/Index.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/Sequence/Index.cshtml
@@ -107,4 +107,4 @@
         </div>
     </div>
 </div>
-@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "SequenceEdit", modalTitle = @L("EditSequenceNumber"), width = "600px", height = "480px" })
+@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "SequenceEdit", width = "600px", height = "480px" })
